--- a/sass/_team.sass
+++ b/sass/_team.sass
@@ -54,6 +54,9 @@
   max-width: 270px
   margin: 0 auto
   margin-bottom: 14px
+  &__item
+    display: flex
+    flex-wrap: wrap
   &__social-links
     img
       width: 24px
