--- a/sass/_works.sass
+++ b/sass/_works.sass
@@ -90,6 +90,9 @@
   background-size: cover
   cursor: pointer
 
+.box__2:hover .hover-effect
+  opacity: 1
+
 .box__3
   display: flex
   position: relative
@@ -99,6 +102,9 @@
   background: url(../img/dribbble_shottie.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__3:hover .hover-effect
+  opacity: 1
 
 .box__4
   display: flex
@@ -110,6 +116,9 @@
   background-size: cover
   cursor: pointer
 
+.box__4:hover .hover-effect
+  opacity: 1
+
 .box__5
   display: flex
   position: relative
@@ -119,6 +128,9 @@
   background: url(../img/ss-drib.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__5:hover .hover-effect
+  opacity: 1
 
 .box__6
   display: flex
@@ -130,6 +142,9 @@
   background-size: cover
   cursor: pointer
 
+.box__6:hover .hover-effect
+  opacity: 1
+
 .box__7
   display: flex
   position: relative
@@ -139,6 +154,9 @@
   background: url(../img/food.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__7:hover .hover-effect
+  opacity: 1
 
 .box__8
   display: flex
@@ -150,6 +168,9 @@
   background-size: cover
   cursor: pointer
 
+.box__8:hover .hover-effect
+  opacity: 1
+
 .box__9
   display: flex
   position: relative
@@ -159,6 +180,9 @@
   background: url(../img/4.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__9:hover .hover-effect
+  opacity: 1
 
 .box__10
   display: flex
@@ -170,6 +194,9 @@
   background-size: cover
   cursor: pointer
 
+.box__10:hover .hover-effect
+  opacity: 1
+
 .box__11
   display: flex
   position: relative
@@ -179,6 +206,9 @@
   background: url(../img/landing-page.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__11:hover .hover-effect
+  opacity: 1
 
 .box__12
   display: flex
@@ -190,6 +220,9 @@
   background-size: cover
   cursor: pointer
 
+.box__12:hover .hover-effect
+  opacity: 1
+
 .box__13
   display: flex
   position: relative
@@ -199,6 +232,9 @@
   background: url(../img/coil-wip.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__13:hover .hover-effect
+  opacity: 1
 
 .box__14
   display: flex
@@ -210,6 +246,9 @@
   background-size: cover
   cursor: pointer
 
+.box__14:hover .hover-effect
+  opacity: 1
+
 .box__15
   display: flex
   position: relative
@@ -219,3 +258,6 @@
   background: url(../img/1.jpg) center left no-repeat
   background-size: cover
   cursor: pointer
+
+.box__15:hover .hover-effect
+  opacity: 1
