--- a/sass/_logo-list.sass
+++ b/sass/_logo-list.sass
@@ -9,8 +9,9 @@
     display: flex
     flex-direction: row
     justify-content: space-between
-    box-sizing: border-box
     flex-wrap: wrap
     align-items: center
   &__item
     align-content: center
+    display: flex
+    flex-wrap: wrap
