--- a/sass/_contacts.sass
+++ b/sass/_contacts.sass
@@ -6,10 +6,10 @@
 
 .contacts-map
   display: flex
+  flex-wrap: wrap
   flex-direction: row
   width: 800px
   height: 650px
-
 
 .contacts-form
   display: flex
