--- a/sass/_logo-list.sass
+++ b/sass/_logo-list.sass
@@ -2,6 +2,7 @@
   background-color: #f5f5f5
   display: flex
   flex-wrap: wrap
+  flex-direction: row
   width: 100%
   padding-top: 42px
   padding-bottom: 43px
@@ -14,4 +15,3 @@
   &__item
     align-content: center
     display: flex
-    flex-wrap: wrap
